--- a/src/app/pages/not-found/not-found.component.scss
+++ b/src/app/pages/not-found/not-found.component.scss
@@ -4,7 +4,6 @@
   position: relative;
   height: max-content;
   width: 100%;
-  overflow-y: visible;
   margin-top: calc(var(--responsiveUnit) * 5);
   padding-block: 1%;
   color: $light;
